--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -17,7 +17,7 @@ redirect_from:
             <style type="text/css" media="screen, projection">
                 @import url(http://assets.freshdesk.com/widget/freshwidget.css); 
             </style> 
-            <iframe title="Feedback Form" class="freshwidget-embedded-form" id="freshwidget-embedded-form" src="https://mageplaza.freshdesk.com/widgets/feedback_widget/new?&widgetType=embedded&screenshot=no" scrolling="no" height="500px" width="100%" frameborder="0" >
+            <iframe title="Feedback Form" class="freshwidget-embedded-form" id="freshwidget-embedded-form" src="#" scrolling="no" height="500px" width="100%" frameborder="0" >
             </iframe>
         </div>
     </div>
