--- a/_pages/pricing.html
+++ b/_pages/pricing.html
@@ -17,7 +17,7 @@ permalink:  "/pricing/"
     </div>
     <hr class="small">
 
-   <h2>Visit <a href="https://www.mageplaza.com/magento-2-one-step-checkout-extension/">Magento 2 One Step Checkout Pricing Page on Mageplaza</a> for further information</h2>
+   <h2>Visit <a href="#">Magento 2 One Step Checkout Pricing Page on Mageplaza</a> for further information</h2>
 
 
     <!-- end section -->
