--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: landing
 title: Magento 2 One Step Checkout
 meta-title: Magento 2 One Step Checkout Extension
-meta-description: "ฏ๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎๎ํํํํํํํํํํํํํํํํํํํํํํํํํํํํํํํํํํํํํํํํํํํํํํํํMagento 2 One Step Checkout extensions list in the market now. Do you wanna say goodbye to the complex checkout which is leaking a huge amount of your money by mass unnecessary required information"
+meta-description: "Magento 2 One Step Checkout extensions list in the market now. Do you wanna say goodbye to the complex checkout which is leaking a huge amount of your money by mass unnecessary required information"
 meta-keywords: "Magento 2 one step checkout, Magento 2 one page checkout, Magento 2 one step checkout extension, Magento 2 one page checkout extension"
 redirect_from:
     - /index.php/
@@ -234,7 +234,7 @@ redirect_from:
                 <p class="lead">Activate two modern technology: Google Address suggestion and Post Code anywhere, so that
 Give customer's most convenience with Google Address suggestion and Post Code anywhere. The user will be recommended their addresses at once and the address  information is likely to be fulfilled automatically in exactly appropriate required fields.</p>
 
-<p class="lead">Additionally, you will discover a superior tool, Locating Button, which can be installed in <a class="nocolor" href="https://www.mageplaza.com/magento-2-one-step-checkout-extension/">Mageplaza 2 One Step Checkout</a>. The customers just need to press on that button, then their address will be entirely outfitted promptly by Google Maps Suggestion.</p>
+<p class="lead">Additionally, you will discover a superior tool, Locating Button, which can be installed in <a class="nocolor" href="#">Mageplaza 2 One Step Checkout</a>. The customers just need to press on that button, then their address will be entirely outfitted promptly by Google Maps Suggestion.</p>
 
 
             </div>
@@ -510,12 +510,12 @@ Give customer's most convenience with Google Address suggestion and Post Code an
         <div>
             <ul>
                 <li>
-                    Mageplaza.com is developing best class Magento Extensions base on an great team.<a href="https://www.mageplaza.com/magento-2-one-step-checkout-extension/">Mageplaza 2 One Step Checkout Extension</a> | 
-                    <a href="https://www.mageplaza.com/magento-2-affiliate-extension/">Mageplaza 2 Affiliate</a> | 
-                    <a href="https://www.mageplaza.com/magento-2-seo-extension/">Mageplaza 2 SEO</a> |
-                    <a href="https://www.mageplaza.com/magento-2-shop-by-brand/">Mageplaza 2 Shop by Brand</a> developed Mageplaza.com. Mageplaza are proud of being one of the leading providers about Magento 2 Extensions. All of these module are created by professional and energetic Mageto Experts under strict quality standard. Thanks to this, they are always highly valued by our customers. <a href="http://mage2onestepcheckout.com/">Mage 2 One Step Checkout</a> and <a href="https://marketplace.magento.com/mageplazaza-magento-2-one-step-checkout-extension.html">Magento 2 One Step Checkout on Marketplace</a>
+                    Mageplaza.com is developing best class Magento Extensions base on an great team.<a href="#">Mageplaza 2 One Step Checkout Extension</a> | 
+                    <a href="#">Mageplaza 2 Affiliate</a> | 
+                    <a href="#">Mageplaza 2 SEO</a> |
+                    <a href="#">Mageplaza 2 Shop by Brand</a> developed Mageplaza.com. Mageplaza are proud of being one of the leading providers about Magento 2 Extensions. All of these module are created by professional and energetic Mageto Experts under strict quality standard. Thanks to this, they are always highly valued by our customers. <a href="#">Mage 2 One Step Checkout</a> and <a href="#">Magento 2 One Step Checkout on Marketplace</a>
                 </li>
-                <li><a href="https://docs.mageplaza.com/one-step-checkout-m2/">One Step Checkout documentations</a></li>
+                <li><a href="#">One Step Checkout documentations</a></li>
             </ul>
 
         </div>
