--- a/_pages/contact-file.html
+++ b/_pages/contact-file.html
@@ -20,7 +20,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Contact | Canvas</title>
+	<title>Contact with File Upload | Canvas</title>
 
 </head>
 
@@ -720,9 +720,9 @@
 
 					<nav>
 						<ul>
-							<li class="current"><a href="contact.html"><div>Default</div></a></li>
+							<li><a href="contact.html"><div>Default</div></a></li>
 							<li><a href="contact-recaptcha.html"><div>With reCaptcha</div></a></li>
-							<li><a href="contact-file.html"><div>File Upload</div></a></li>
+							<li class="current"><a href="contact-file.html"><div>File Upload</div></a></li>
 							<li><a href="contact-inline.html"><div>Inline Notification</div></a></li>
 						</ul>
 					</nav>
@@ -753,7 +753,7 @@
 
 							<div class="contact-form-result"></div>
 
-							<form class="nobottommargin" id="template-contactform" name="template-contactform" action="include/sendemail.php" method="post">
+							<form class="nobottommargin" id="template-contactform" name="template-contactform" action="include/sendemail.php" method="post" enctype="multipart/form-data">
 
 								<div class="form-process"></div>
 
@@ -793,6 +793,11 @@
 								<div class="clear"></div>
 
 								<div class="col_full">
+									<label for="template-contactform-message">Upload CV <small>*</small></label>
+									<input type="file" id="template-contactform-file" name="template-contactform-file" value="" class="required sm-form-control" />
+								</div>
+
+								<div class="col_full">
 									<label for="template-contactform-message">Message <small>*</small></label>
 									<textarea class="required sm-form-control" id="template-contactform-message" name="template-contactform-message" rows="6" cols="30"></textarea>
 								</div>
@@ -806,6 +811,7 @@
 								</div>
 
 							</form>
+
 						</div>
 
 					</div><!-- .postcontent end -->
@@ -825,14 +831,14 @@
 
 						<div class="widget noborder notoppadding">
 
-							<div class="fslider customjs testimonial twitter-scroll twitter-feed" data-username="envato" data-count="3" data-animation="slide" data-arrows="false">
-								<i class="i-plain i-small color icon-twitter nobottommargin" style="margin-right: 15px;"></i>
-								<div class="flexslider" style="width: auto;">
-									<div class="slider-wrap">
-										<div class="slide"></div>
-									</div>
+							<div class="fslider customjs testimonial twitter-scroll twitter-feed" data-username="envato" data-count="3" data-animation="fade" data-arrows="false">
+							<i class="i-plain i-small color icon-twitter nobottommargin" style="margin-right: 10px;"></i>
+							<div class="flexslider" style="width: auto;">
+								<div class="slider-wrap">
+									<div class="slide"></div>
 								</div>
 							</div>
+						</div>
 
 						</div>
 
@@ -1126,12 +1132,11 @@
 
 	<script type="text/javascript">
 
-		jQuery('#google-map').gMap({
+		$('#google-map').gMap({
 
-			latitude: -37.9712369,
-			longitude: 144.4926746,
+			address: 'Melbourne, Australia',
 			maptype: 'ROADMAP',
-			zoom: 9,
+			zoom: 14,
 			markers: [
 				{
 					address: "Melbourne, Australia",
@@ -1139,7 +1144,7 @@
 					icon: {
 						image: "images/icons/map-icon-red.png",
 						iconsize: [32, 39],
-						iconanchor: [13,39]
+						iconanchor: [32,39]
 					}
 				}
 			],
@@ -1152,6 +1157,7 @@
 				streetViewControl: false,
 				overviewMapControl: false
 			}
+
 		});
 
 	</script>
