--- a/_pages/contact-alt-message.html
+++ b/_pages/contact-alt-message.html
@@ -706,34 +706,7 @@
 
 		<!-- Google Map
 		============================================= -->
-		<section id="google-map" class="gmap slider-parallax"></section>
-
-		<!-- Page Sub Menu
-		============================================= -->
-		<div id="page-menu">
-
-			<div id="page-menu-wrap">
-
-				<div class="container clearfix">
-
-					<div class="menu-title">Contact <span>Options</span></div>
-
-					<nav>
-						<ul>
-							<li class="current"><a href="contact.html"><div>Default</div></a></li>
-							<li><a href="contact-recaptcha.html"><div>With reCaptcha</div></a></li>
-							<li><a href="contact-file.html"><div>File Upload</div></a></li>
-							<li><a href="contact-inline.html"><div>Inline Notification</div></a></li>
-						</ul>
-					</nav>
-
-					<div id="page-submenu-trigger"><i class="icon-reorder"></i></div>
-
-				</div>
-
-			</div>
-
-		</div><!-- #page-menu end -->
+		<section id="google-map" class="gmap"></section>
 
 		<!-- Content
 		============================================= -->
@@ -753,7 +726,7 @@
 
 							<div class="contact-form-result"></div>
 
-							<form class="nobottommargin" id="template-contactform" name="template-contactform" action="include/sendemail.php" method="post">
+							<form class="nobottommargin" id="template-contactform" name="template-contactform" action="include/sendemail-alt-message.php" method="post">
 
 								<div class="form-process"></div>
 
@@ -793,6 +766,13 @@
 								<div class="clear"></div>
 
 								<div class="col_full">
+									<label for="template-contactform-file">Add a CV <small>*</small></label>
+									<input type="file" class="required sm-form-control" id="template-contactform-file" name="template-contactform-file" />
+								</div>
+
+								<div class="clear"></div>
+
+								<div class="col_full">
 									<label for="template-contactform-message">Message <small>*</small></label>
 									<textarea class="required sm-form-control" id="template-contactform-message" name="template-contactform-message" rows="6" cols="30"></textarea>
 								</div>
@@ -806,6 +786,7 @@
 								</div>
 
 							</form>
+
 						</div>
 
 					</div><!-- .postcontent end -->
@@ -1048,7 +1029,7 @@
 				<div class="container clearfix">
 
 					<div class="col_half">
-						Copyrights &copy; 2014 All Rights Reserved by Canvas Inc.<br>
+						Copyrights &copy; 2016 All Rights Reserved by Canvas Inc.<br>
 						<div class="copyright-links"><a href="#">Terms of Use</a> / <a href="#">Privacy Policy</a></div>
 					</div>
 
@@ -1117,21 +1098,20 @@
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/plugins.js"></script>
 
+	<script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyDMxJ92oBkSnVNHFX3R8XhtYQPEgk1_IiI"></script>
+	<script type="text/javascript" src="js/jquery.gmap.js"></script>
+
 	<!-- Footer Scripts
 	============================================= -->
 	<script type="text/javascript" src="js/functions.js"></script>
 
-	<script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyDMxJ92oBkSnVNHFX3R8XhtYQPEgk1_IiI"></script>
-	<script type="text/javascript" src="js/jquery.gmap.js"></script>
-
 	<script type="text/javascript">
 
-		jQuery('#google-map').gMap({
+		$('#google-map').gMap({
 
-			latitude: -37.9712369,
-			longitude: 144.4926746,
+			address: 'Melbourne, Australia',
 			maptype: 'ROADMAP',
-			zoom: 9,
+			zoom: 14,
 			markers: [
 				{
 					address: "Melbourne, Australia",
@@ -1152,6 +1132,7 @@
 				streetViewControl: false,
 				overviewMapControl: false
 			}
+
 		});
 
 	</script>
