--- a/_pages/contact-inline.html
+++ b/_pages/contact-inline.html
@@ -20,7 +20,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Contact | Canvas</title>
+	<title>Contact with Inline Notification | Canvas</title>
 
 </head>
 
@@ -720,10 +720,10 @@
 
 					<nav>
 						<ul>
-							<li class="current"><a href="contact.html"><div>Default</div></a></li>
+							<li><a href="contact.html"><div>Default</div></a></li>
 							<li><a href="contact-recaptcha.html"><div>With reCaptcha</div></a></li>
 							<li><a href="contact-file.html"><div>File Upload</div></a></li>
-							<li><a href="contact-inline.html"><div>Inline Notification</div></a></li>
+							<li class="current"><a href="contact-inline.html"><div>Inline Notification</div></a></li>
 						</ul>
 					</nav>
 
@@ -749,7 +749,7 @@
 
 						<h3>Send us an Email</h3>
 
-						<div class="contact-widget">
+						<div class="contact-widget" data-alert-type="inline">
 
 							<div class="contact-form-result"></div>
 
@@ -1126,12 +1126,11 @@
 
 	<script type="text/javascript">
 
-		jQuery('#google-map').gMap({
+		$('#google-map').gMap({
 
-			latitude: -37.9712369,
-			longitude: 144.4926746,
+			address: 'Melbourne, Australia',
 			maptype: 'ROADMAP',
-			zoom: 9,
+			zoom: 14,
 			markers: [
 				{
 					address: "Melbourne, Australia",
