--- a/index.html
+++ b/index.html
@@ -88,9 +88,7 @@ redirect_from:
                             <div class="fslider bnews-slider nobottommargin" data-speed="800" data-pause="6000" data-arrows="false" data-pagi="false">
                                 <div class="flexslider">
                                     <div class="slider-wrap">
-                                        <div class="slide"><a href="#"><strong>Russia hits back, says US acts like a 'bad surgeon'..</strong></a></div>
-                                        <div class="slide"><a href="#"><strong>'Sulking' Narayan Rane needs consolation: Uddhav reacts to Cong leader's attack..</strong></a></div>
-                                        <div class="slide"><a href="#"><strong>Rane needs consolation. I pray to God that he gets mental peace in a political party..</strong></a></div>
+                                        {% include recent_posts.html %}
                                     </div>
                                 </div>
                             </div>
