--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ redirect_from:
                             <div class="fslider bnews-slider nobottommargin" data-speed="800" data-pause="6000" data-arrows="false" data-pagi="false">
                                 <div class="flexslider">
                                     <div class="slider-wrap">
-                                        {% include recent_posts.html %}
+                                        {% for post in site.categories.blog random:1 %}
                                     </div>
                                 </div>
                             </div>
