--- a/index.html
+++ b/index.html
@@ -365,11 +365,11 @@ redirect_from:
 
 					</div>
 
-					<div class="fancy-title title-border">
+					<!--div class="fancy-title title-border">
 						<h3>Featured Video</h3>
 					</div>
 
-					<iframe src="http://player.vimeo.com/video/99895335" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+					<iframe src="http://player.vimeo.com/video/99895335" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe-->
 
 				</div>
 
