--- a/_pages/blog.html
+++ b/_pages/blog.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: ""
-meta-title: ""
-h1-title: ""
+title: "Blog của Tôi"
+meta-title: "Blog của Tôi"
+h1-title: "Blog của Tôi"
 description: ""
 meta-description: ""
 permalink: "/blog/"
