--- a/_pages/blog.html
+++ b/_pages/blog.html
@@ -93,21 +93,21 @@ paginate: true
 
                         <!-- Pagination
                         ============================================= -->
-                        <ul class="pager nomargin">
+                        <!--ul class="pager nomargin">
                             <li class="previous"><a href="#">Bài viết cũ hơn</a></li>
                             <li class="next"><a href="#">Bài viết mới hơn</a></li>
-                        </ul><!-- .pager end -->
+                        </ul><! .pager end -->
 
                         <!-- Pagination links -->
                         <ul class="pager nomargin">
                           {% if paginator.previous_page %}
-                            <a href="{{ paginator.previous_page_path }}" class="previous">Previous</a>
+                            <li><a href="{{ paginator.previous_page_path }}" class="previous">Previous</a></li>
                           {% else %}
                             <span class="previous">Previous</span>
                           {% endif %}
                           <span class="page_number ">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span>
                           {% if paginator.next_page %}
-                            <a href="{{ paginator.next_page_path }}" class="next">Next</a>
+                            <li><a href="{{ paginator.next_page_path }}" class="next">Next</a></li>
                           {% else %}
                             <span class="next ">Next</span>
                           {% endif %}
