--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 			<!--
 			CSS
 			============================================= -->
-			<link rel="stylesheet" href="css/linearicons.css">
-			<link rel="stylesheet" href="css/font-awesome.min.css">
-			<link rel="stylesheet" href="css/bootstrap.css">
-			<link rel="stylesheet" href="css/magnific-popup.css">
-			<link rel="stylesheet" href="css/nice-select.css">					
-			<link rel="stylesheet" href="css/animate.min.css">
-			<link rel="stylesheet" href="css/owl.carousel.css">
-			<link rel="stylesheet" href="css/main.css">
+			<link rel="stylesheet" href="css/linearicons.css" media="none" onload="if(media!='all')media='all'">
+			<link rel="stylesheet" href="css/font-awesome.min.css" media="none" onload="if(media!='all')media='all'">
+			<link rel="stylesheet" href="css/bootstrap.css" media="none" onload="if(media!='all')media='all'">
+			<link rel="stylesheet" href="css/magnific-popup.css" media="none" onload="if(media!='all')media='all'">
+			<link rel="stylesheet" href="css/nice-select.css" media="none" onload="if(media!='all')media='all'">
+			<link rel="stylesheet" href="css/animate.min.css" media="none" onload="if(media!='all')media='all'">
+			<link rel="stylesheet" href="css/owl.carousel.css" media="none" onload="if(media!='all')media='all'">
+			<link rel="stylesheet" href="css/main.css" media="none" onload="if(media!='all')media='all'">
 		</head>
 		<body>
 
