--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 			<!-- End galery Area -->
 
 			<!-- Start blog Area -->
-			<section class="blog-area section-gap" id="blog">
+			<!--section class="blog-area section-gap" id="blog">
 				<div class="container">
 					<div class="row d-flex justify-content-center">
 						<div class="menu-content pb-70 col-lg-8">
