--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 			<!-- end fact Area -->							
 
 			<!-- Start galery Area -->
-			<section class="galery-area section-gap" id="gallery">
+			<!--section class="galery-area section-gap" id="gallery">
 				<div class="container">
 					<div class="row d-flex justify-content-center">
 						<div class="menu-content pb-70 col-lg-8">
