--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 				  		</div>
 				  		<div class="col-6 top-head-right">
 				  			<ul>
-				  				<li><a href="tel:+880 012 3654 896"><span>+880 012 3654 896</span> <span class="lnr lnr-phone-handset"></span></a></li>
-				  				<li><a href="#">Register / Login</a></li>
+				  				<li><a href="tel:0985629621"><span>0985.629.621</span> <span class="lnr lnr-phone-handset"></span></a></li>
+				  				<li><a href="mailto:khuynhtroc@gmail.com">khuynhtroc@gmail.com</a></li>
 				  			</ul>
 				  		</div>			  			
 			  		</div>
@@ -54,11 +54,11 @@
 			    <div class="container">
 			    	<div class="row align-items-center justify-content-between d-flex">
 				      <div id="logo">
-				        <a href="index.html"><img src="img/logo.png" alt="" title="" /></a>
+				        <a href="/"><img src="img/logo.png" alt="" title="" /></a>
 				      </div>
 				      <nav id="nav-menu-container">
 				        <ul class="nav-menu">
-				          <li class="menu-active"><a href="inxed.html">Home</a></li>
+				          <li class="menu-active"><a href="/">Home</a></li>
 				          <li><a href="about.html">About Us</a></li>
 				          <li><a href="service.html">Service</a></li>
 				          <li><a href="team.html">Team</a></li>
