--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 	<!DOCTYPE html>
-	<html lang="zxx" class="no-js">
+	<html lang="vi-VN" class="no-js">
 	<head>
 		<!-- Mobile Specific Meta -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -58,13 +58,12 @@
 				      </div>
 				      <nav id="nav-menu-container">
 				        <ul class="nav-menu">
-				          <li class="menu-active"><a href="/">Home</a></li>
+				          <li class="menu-active"><a href="/">TRANG CHỦ</a></li>
 				          <li><a href="about.html">About Us</a></li>
-				          <li><a href="service.html">Service</a></li>
-				          <li><a href="team.html">Team</a></li>
-				          <li><a href="price.html">Price</a></li>
-				          <li><a href="blog-home.html">Blog</a></li>	
-				          <li><a href="contact.html">Contact</a></li>	
+				          <li><a href="service.html">DỊCH VỤ</a></li>
+				          <li><a href="team.html">FRIENDS</a></li>
+				          <li><a href="blog-home.html">BLOG</a></li>	
+				          <li><a href="contact.html">LIÊN HỆ</a></li>	
 				          <li class="menu-has-children"><a href="">Pages</a>
 				            <ul>
 				              <li><a href="blog-single.html">blog Single</a></li>
@@ -108,6 +107,47 @@
 							</div>
 						</div>
 					</div>						
+					<div class="row">
+						<div class="col-lg-4">
+							<div class="single-service">
+								<div class="thumb">
+									<img class="img-fluid" src="img/s1.jpg" alt="">
+								</div>
+								<div class="detail">
+									<a href="#"><h4>Basic & Common Repairs</h4></a>
+									<p>
+										Computer users and programmers have become so accustomed to using Windows, even for the changing capabilities and the appearances of the graphical.									
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-4">
+							<div class="single-service">
+								<div class="thumb">
+									<img class="img-fluid" src="img/s2.jpg" alt="">
+								</div>
+								<div class="detail">
+									<a href="#"><h4>Brake Repairs & Services</h4></a>
+									<p>
+										Computer users and programmers have become so accustomed to using Windows, even for the changing capabilities and the appearances of the graphical.									
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-4">
+							<div class="single-service">
+								<div class="thumb">
+									<img class="img-fluid" src="img/s3.jpg" alt="">
+								</div>
+								<div class="detail">
+									<a href="#"><h4>Preventive Maintenance</h4></a>
+									<p>
+										Computer users and programmers have become so accustomed to using Windows, even for the changing capabilities and the appearances of the graphical.									
+									</p>
+								</div>
+							</div>
+						</div>												
+					</div>
 					<div class="row">
 						<div class="col-lg-4">
 							<div class="single-service">
