--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				  		<div class="col-6 top-head-right">
 				  			<ul>
 				  				<li><a href="tel:0985629621"><span>0985.629.621</span> <span class="lnr lnr-phone-handset"></span></a></li>
-				  				<li><a href="mailto:khuynhtroc@gmail.com">khuynhtroc@gmail.com</a></li>
+				  				<li><a href="mailto:khuynhtroc@gmail.com"><span>khuynhtroc@gmail.com</span> <span class="lnr lnr-bubble"></span></a></li>
 				  			</ul>
 				  		</div>			  			
 			  		</div>
