--- a/_pages/services.html
+++ b/_pages/services.html
@@ -75,69 +75,155 @@
 					<div class="row d-flex align-items-center justify-content-center">
 						<div class="about-content col-lg-12">
 							<h1 class="text-white">
-								About Us				
+								Services				
 							</h1>	
-							<p class="text-white link-nav"><a href="index.html">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="about.html"> About Us</a></p>
+							<p class="text-white link-nav"><a href="index.html">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="services.html"> Services</a></p>
 						</div>	
 					</div>
 				</div>
 			</section>
 			<!-- End banner Area -->	
 
-			<!-- Start about-video Area -->
-			<section class="about-video-area section-gap">
+			<!-- Start offered-service Area -->
+			<section class="offered-service-area section-gap">
 				<div class="container">
-					<div class="row align-items-center">
-						<div class="col-lg-6 about-video-left">
-							<h6 class="text-uppercase">Brand new app to blow your mind</h6>
-							<h1>
-								We’ve made a life <br>
-								that will change you 
-							</h1>
+					<div class="row d-flex justify-content-center">
+						<div class="col-md-12 pb-40 header-text text-center">
+							<h1 class="pb-10">Our Offered Services to you</h1>
 							<p>
-								<span>We are here to listen from you deliver exellence</span>
+								Who are in extremely love with eco friendly system.
 							</p>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed doeiusmo d tempor incididunt ut labore et dolore magna aliqua.
-							</p>
-							<a class="primary-btn" href="#">Get Started Now</a>
 						</div>
-						<div class="col-lg-6 about-video-right justify-content-center align-items-center d-flex relative">
-							<div class="overlay overlay-bg"></div>
-							<a class="play-btn" href="https://www.youtube.com/watch?v=ARA0AxrnHdM"><img class="img-fluid mx-auto" src="img/play-btn.png" alt=""></a>
+					</div>							
+					<div class="row">
+						<div class="col-lg-4">
+							<div class="single-offered-service">
+								<img class="img-fluid" src="img/os1.jpg" alt="">
+								<a href="#">
+									<h4>Drone Architecture</h4>
+								</a>	
+								<p>
+									inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct women face higher conduct.
+								</p>
+								
+							</div>
 						</div>
+						<div class="col-lg-4">
+							<div class="single-offered-service">
+								<img class="img-fluid" src="img/os2.jpg" alt="">
+								<a href="#">
+									<h4>Device Robot System</h4>
+								</a>	
+								<p>
+									inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct women face higher conduct.
+								</p>
+							</div>
+						</div>
+						<div class="col-lg-4">
+							<div class="single-offered-service">
+								<img class="img-fluid" src="img/os3.jpg" alt="">
+								<a href="#">
+									<h4>Industrial Robot Management</h4>
+								</a>	
+								<p>
+									inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct women face higher conduct.
+								</p>
+							</div>
+						</div>												
 					</div>
 				</div>	
 			</section>
-			<!-- End about-video Area -->			
+			<!-- End offered-service Area -->
+			
 
-			<!-- Start home-about Area -->
-			<section class="home-about-area">
-				<div class="container-fluid">
-					<div class="row align-items-center">
-						<div class="col-lg-6 home-about-left no-padding">
-							<img class="mx-auto d-block img-fluid" src="img/about-img.png" alt="">
-						</div>
-						<div class="col-lg-6 home-about-right no-padding">
-							<h1>Globally Connected <br>
-							by Large Network</h1>
-							<h5>
-								We are here to listen from you deliver exellence
-							</h5>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Ut enim ad minim. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.
+			<!-- Start feature Area -->
+			<section class="feature-area section-gap">
+				<div class="container">
+					<div class="row d-flex justify-content-center">
+						<div class="col-md-12 pb-40 header-text text-center">
+							<h1 class="pb-10 text-white">Some Features that Made us Unique</h1>
+							<p class="text-white">
+								Who are in extremely love with eco friendly system.
 							</p>
-							<a class="primary-btn text-uppercase" href="#">Get Details</a>
 						</div>
+					</div>							
+					<div class="row">
+						<div class="col-lg-4 col-md-6">
+							<div class="single-feature">
+								<a href="#" class="title d-flex flex-row">
+									<span class="lnr lnr-user"></span>
+									<h4>Expert Technicians</h4>
+								</a>
+								<p>
+									Usage of the Internet is becoming more common due to rapid advancement of technology and power.
+								</p>
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-6">
+							<div class="single-feature">
+								<a href="#" class="title d-flex flex-row">
+									<span class="lnr lnr-license"></span>
+									<h4>Professional Service</h4>
+								</a>
+								<p>
+									Usage of the Internet is becoming more common due to rapid advancement of technology and power.
+								</p>
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-6">
+							<div class="single-feature">
+								<a href="#" class="title d-flex flex-row">
+									<span class="lnr lnr-phone"></span>
+									<h4>Great Support</h4>
+								</a>
+								<p>
+									Usage of the Internet is becoming more common due to rapid advancement of technology and power.
+								</p>
+							</div>
+						</div>						
+						<div class="col-lg-4 col-md-6">
+							<div class="single-feature">
+								<a href="#" class="title d-flex flex-row">
+									<span class="lnr lnr-rocket"></span>
+									<h4>Technical Skills</h4>
+								</a>
+								<p>
+									Usage of the Internet is becoming more common due to rapid advancement of technology and power.
+								</p>
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-6">
+							<div class="single-feature">
+								<a href="#" class="title d-flex flex-row">
+									<span class="lnr lnr-diamond"></span>
+									<h4>Highly Recomended</h4>
+								</a>
+								<p>
+									Usage of the Internet is becoming more common due to rapid advancement of technology and power.
+								</p>
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-6">
+							<div class="single-feature">
+								<a href="#" class="title d-flex flex-row">
+									<span class="lnr lnr-bubble"></span>
+									<h4>Positive Reviews</h4>
+								</a>
+								<p>
+									Usage of the Internet is becoming more common due to rapid advancement of technology and power.
+								</p>
+							</div>
+						</div>	
+
 					</div>
 				</div>	
 			</section>
-			<!-- End home-about Area -->
-
+			<!-- End feature Area -->			
+				
 			<!-- Start brand Area -->
 			<section class="brand-area section-gap">
 				<div class="container">
-					<div class="row align-items-center">
+					<div class="row">
 						<div class="col single-brand">
 							<img class="img-fluid" src="img/l1.png" alt="">
 						</div>
