--- a/_pages/products.html
+++ b/_pages/products.html
@@ -75,67 +75,202 @@
 					<div class="row d-flex align-items-center justify-content-center">
 						<div class="about-content col-lg-12">
 							<h1 class="text-white">
-								About Us				
+								Products				
 							</h1>	
-							<p class="text-white link-nav"><a href="index.html">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="about.html"> About Us</a></p>
+							<p class="text-white link-nav"><a href="index.html">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="products.html"> Products</a></p>
 						</div>	
 					</div>
 				</div>
 			</section>
 			<!-- End banner Area -->	
-
-			<!-- Start about-video Area -->
-			<section class="about-video-area section-gap">
+				
+			<!-- Start products Area -->
+			<section class="products-area product-page section-gap">
 				<div class="container">
-					<div class="row align-items-center">
-						<div class="col-lg-6 about-video-left">
-							<h6 class="text-uppercase">Brand new app to blow your mind</h6>
-							<h1>
-								We’ve made a life <br>
-								that will change you 
-							</h1>
+					<div class="row d-flex justify-content-center">
+						<div class="col-md-12 pb-40 header-text text-center">
+							<h1 class="pb-10">Featured Robotics Products to Show</h1>
 							<p>
-								<span>We are here to listen from you deliver exellence</span>
+								Who are in extremely love with eco friendly system.
 							</p>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed doeiusmo d tempor incididunt ut labore et dolore magna aliqua.
-							</p>
-							<a class="primary-btn" href="#">Get Started Now</a>
 						</div>
-						<div class="col-lg-6 about-video-right justify-content-center align-items-center d-flex relative">
-							<div class="overlay overlay-bg"></div>
-							<a class="play-btn" href="https://www.youtube.com/watch?v=ARA0AxrnHdM"><img class="img-fluid mx-auto" src="img/play-btn.png" alt=""></a>
-						</div>
+					</div>							
+					<div class="row">
+						<div class="col-lg-3 col-md-6">
+							<div class="single-product">
+								<div class="thumb">
+									<img src="img/p1.png" alt="">
+								</div>
+								<div class="details">
+									<h4>The Upper Eye</h4>
+									<p>
+										Who are in extremely love with eco friendly system.
+									</p>
+									<a href="product-details.html" class="primary-btn text-uppercase">View Details</a>
+								</div>
+							</div>
+						</div>	
+						<div class="col-lg-3 col-md-6">
+							<div class="single-product">
+								<div class="thumb">
+									<img src="img/p2.png" alt="">
+								</div>
+								<div class="details">
+									<h4>The Crab Wheel</h4>
+									<p>
+										Who are in extremely love with eco friendly system.
+									</p>
+									<a href="product-details.html" class="primary-btn text-uppercase">View Details</a>
+								</div>
+							</div>
+						</div>	
+						<div class="col-lg-3 col-md-6">
+							<div class="single-product">
+								<div class="thumb">
+									<img src="img/p3.png" alt="">
+								</div>
+								<div class="details">
+									<h4>The Plug Ninja</h4>
+									<p>
+										Who are in extremely love with eco friendly system.
+									</p>
+									<a href="product-details.html" class="primary-btn text-uppercase">View Details</a>
+								</div>
+							</div>
+						</div>	
+						<div class="col-lg-3 col-md-6">
+							<div class="single-product">
+								<div class="thumb">
+									<img src="img/p4.png" alt="">
+								</div>
+								<div class="details">
+									<h4>The Controller</h4>
+									<p>
+										Who are in extremely love with eco friendly system.
+									</p>
+									<a href="product-details.html" class="primary-btn text-uppercase">View Details</a>
+								</div>
+							</div>
+						</div>																				
+						<div class="col-lg-3 col-md-6">
+							<div class="single-product">
+								<div class="thumb">
+									<img src="img/p1.png" alt="">
+								</div>
+								<div class="details">
+									<h4>The Upper Eye</h4>
+									<p>
+										Who are in extremely love with eco friendly system.
+									</p>
+									<a href="product-details.html" class="primary-btn text-uppercase">View Details</a>
+								</div>
+							</div>
+						</div>	
+						<div class="col-lg-3 col-md-6">
+							<div class="single-product">
+								<div class="thumb">
+									<img src="img/p2.png" alt="">
+								</div>
+								<div class="details">
+									<h4>The Crab Wheel</h4>
+									<p>
+										Who are in extremely love with eco friendly system.
+									</p>
+									<a href="product-details.html" class="primary-btn text-uppercase">View Details</a>
+								</div>
+							</div>
+						</div>	
+						<div class="col-lg-3 col-md-6">
+							<div class="single-product">
+								<div class="thumb">
+									<img src="img/p3.png" alt="">
+								</div>
+								<div class="details">
+									<h4>The Plug Ninja</h4>
+									<p>
+										Who are in extremely love with eco friendly system.
+									</p>
+									<a href="product-details.html" class="primary-btn text-uppercase">View Details</a>
+								</div>
+							</div>
+						</div>	
+						<div class="col-lg-3 col-md-6">
+							<div class="single-product">
+								<div class="thumb">
+									<img src="img/p4.png" alt="">
+								</div>
+								<div class="details">
+									<h4>The Controller</h4>
+									<p>
+										Who are in extremely love with eco friendly system.
+									</p>
+									<a href="product-details.html" class="primary-btn text-uppercase">View Details</a>
+								</div>
+							</div>
+						</div>	
+						<div class="col-lg-3 col-md-6">
+							<div class="single-product">
+								<div class="thumb">
+									<img src="img/p1.png" alt="">
+								</div>
+								<div class="details">
+									<h4>The Upper Eye</h4>
+									<p>
+										Who are in extremely love with eco friendly system.
+									</p>
+									<a href="product-details.html" class="primary-btn text-uppercase">View Details</a>
+								</div>
+							</div>
+						</div>	
+						<div class="col-lg-3 col-md-6">
+							<div class="single-product">
+								<div class="thumb">
+									<img src="img/p2.png" alt="">
+								</div>
+								<div class="details">
+									<h4>The Crab Wheel</h4>
+									<p>
+										Who are in extremely love with eco friendly system.
+									</p>
+									<a href="product-details.html" class="primary-btn text-uppercase">View Details</a>
+								</div>
+							</div>
+						</div>	
+						<div class="col-lg-3 col-md-6">
+							<div class="single-product">
+								<div class="thumb">
+									<img src="img/p3.png" alt="">
+								</div>
+								<div class="details">
+									<h4>The Plug Ninja</h4>
+									<p>
+										Who are in extremely love with eco friendly system.
+									</p>
+									<a href="product-details.html" class="primary-btn text-uppercase">View Details</a>
+								</div>
+							</div>
+						</div>	
+						<div class="col-lg-3 col-md-6">
+							<div class="single-product">
+								<div class="thumb">
+									<img src="img/p4.png" alt="">
+								</div>
+								<div class="details">
+									<h4>The Controller</h4>
+									<p>
+										Who are in extremely love with eco friendly system.
+									</p>
+									<a href="product-details.html" class="primary-btn text-uppercase">View Details</a>
+								</div>
+							</div>
+						</div>															
 					</div>
 				</div>	
 			</section>
-			<!-- End about-video Area -->			
-
-			<!-- Start home-about Area -->
-			<section class="home-about-area">
-				<div class="container-fluid">
-					<div class="row align-items-center">
-						<div class="col-lg-6 home-about-left no-padding">
-							<img class="mx-auto d-block img-fluid" src="img/about-img.png" alt="">
-						</div>
-						<div class="col-lg-6 home-about-right no-padding">
-							<h1>Globally Connected <br>
-							by Large Network</h1>
-							<h5>
-								We are here to listen from you deliver exellence
-							</h5>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Ut enim ad minim. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.
-							</p>
-							<a class="primary-btn text-uppercase" href="#">Get Details</a>
-						</div>
-					</div>
-				</div>	
-			</section>
-			<!-- End home-about Area -->
+			<!-- End products Area -->
 
 			<!-- Start brand Area -->
-			<section class="brand-area section-gap">
+			<section class="brand-area pb-120">
 				<div class="container">
 					<div class="row align-items-center">
 						<div class="col single-brand">
@@ -156,7 +291,7 @@
 					</div>
 				</div>	
 			</section>
-			<!-- End brand Area -->			
+			<!-- End brand Area -->					
 				
 			<!-- start footer Area -->		
 			<footer class="footer-area section-gap">
@@ -247,5 +382,3 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 			<script src="js/main.js"></script>	
 		</body>
 	</html>
-
-
