--- a/car.html
+++ b/car.html
@@ -5,8 +5,9 @@ meta-title: "Toytota Thái Hòa"
 description: ""
 meta-description: ""
 meta-keywords: ""
-redirect_from:
-    - /index.php/
+permalink: "/car/"
+published: true
+sitemap: true
 ---
 
 
