--- a/car.html
+++ b/car.html
@@ -1,7 +1,7 @@
 ---
 layout: car/home
-title: "Toytota Thái Hòa"
-meta-title: "Toytota Thái Hòa"
+title: "Toytota"
+meta-title: "Toytota"
 description: ""
 meta-description: ""
 meta-keywords: ""
