--- a/_pages/car/vios.html
+++ b/_pages/car/vios.html
@@ -1,12 +1,12 @@
 ---
-layout: car_product
+layout: car/product
 title: "Vios"
 h1-title: "Vios"
 meta-title: "Vios"
 description: ""
 meta-description: ""
 meta-keywords: ""
-permalink: "/car/vios/"
+permalink: "car/vios/"
 published: true
 sitemap: true
 ---
