--- a/car.html
+++ b/car.html
@@ -5,7 +5,7 @@ meta-title: "Toytota"
 description: ""
 meta-description: ""
 meta-keywords: ""
-permalink: "/car/"
+permalink: "car/"
 published: true
 sitemap: true
 ---
