--- a/_pages/car/vios.html
+++ b/_pages/car/vios.html
@@ -116,13 +116,13 @@ sitemap: true
 										<table class="table">
 											<thead>
 												<tr>
-													<th scope="col" class="color">Body</th>
+													<th scope="col" class="color">Kích thước</th>
 													<th scope="col"></th>
 												</tr>
 											</thead>
 											<tbody>
 												<tr>
-													<td scope="row" class="text-black-50">Length:</td>
+													<td scope="row" class="text-black-50">Chiều dài:</td>
 													<td class="tright t600">4,528 mm</td>
 												</tr>
 												<tr>
@@ -187,50 +187,30 @@ sitemap: true
 							<!-- Page Section - gallery
 							============================================= -->
 							<div id="section-price" class="page-section mt-5">
-								<h3 class="mb-3">Price Lists</h3>
+								<h3 class="mb-3">BẢNG GIÁ TOYOTA VIOS 2019</h3>
 								<table class="table table-striped">
 									<thead>
 										<tr>
-											<th scope="col">Models</th>
-											<th scope="col">City</th>
-											<th scope="col">Price</th>
+											<th scope="col">PHIÊN BẢN</th>
+											<th scope="col">ĐỊA ĐIỂM</th>
+											<th scope="col">GIÁ NIÊM YẾT</th>
 										</tr>
 									</thead>
 									<tbody>
 										<tr>
-											<td><a href="#">911 Carrera Petrol</a><br><small>2981 cc Petrol, Manual, 14.2 kmpl</small></td>
-											<td style="vertical-align: middle">New York</td>
-											<td style="vertical-align: middle" class="t600">$2,15,600</td>
+											<td><a href="#">VIOS 1.5E (MT)</a><br><small>Số Sàn</small></td>
+											<td style="vertical-align: middle">Toàn quốc</td>
+											<td style="vertical-align: middle" class="t600">531.000.000đ</td>
 										</tr>
 										<tr>
-											<td><a href="#">911 Carrera Cabriolet Petrol</a><br><small>2981 cc Petrol, Manual, 14.2 kmpl</small></td>
-											<td style="vertical-align: middle">San Fransisco</td>
-											<td style="vertical-align: middle" class="t600">$2,36,809</td>
+											<td><a href="#">Vios 1.5E (CVT)</a><br><small>Số Tự Động</small></td>
+											<td style="vertical-align: middle">Toàn quốc</td>
+											<td style="vertical-align: middle" class="t600">569.000.000đ</td>
 										</tr>
 										<tr>
-											<td><a href="#">911 Carrera s Cabriolet</a><br><small>2981 cc Petrol, Manual, 13.9 kmpl</small></td>
-											<td style="vertical-align: middle">Chicago</td>
-											<td style="vertical-align: middle" class="t600">$2,66,606</td>
-										</tr>
-										<tr>
-											<td><a href="#">911 Carrera Turbo</a><br><small>3800 cc Petrol, Manual, 12.9 kmpl</small></td>
-											<td style="vertical-align: middle">Washington</td>
-											<td style="vertical-align: middle" class="t600">$2,47,225</td>
-										</tr>
-										<tr>
-											<td><a href="#">911 Carrera GT3</a><br><small>3996 cc Petrol, Manual, 12.8 kmpl</small></td>
-											<td style="vertical-align: middle">North Carolina</td>
-											<td style="vertical-align: middle" class="t600">$3,23,153</td>
-										</tr>
-										<tr>
-											<td><a href="#">911 Carrera Turbo Cabriolet</a><br><small>3800 cc Petrol, Manual, 12.9 kmpl</small></td>
-											<td style="vertical-align: middle">Texas</td>
-											<td style="vertical-align: middle" class="t600">$3,62,538</td>
-										</tr>
-										<tr>
-											<td><a href="#">911 Carrera Turbo S Cabriolet</a><br><small>3800 cc Petrol, Manual, 12.8 kmpl</small></td>
-											<td style="vertical-align: middle">Denver</td>
-											<td style="vertical-align: middle" class="t600">$4,27,675</td>
+											<td><a href="#">Vios 1.5G (CVT)</a><br><small>Số Tự Động</small></td>
+											<td style="vertical-align: middle">Toàn quốc</td>
+											<td style="vertical-align: middle" class="t600">606.000.000đ</td>
 										</tr>
 									 </tbody>
 								</table>
@@ -239,7 +219,7 @@ sitemap: true
 							<!-- Page Section - gallery
 							============================================= -->
 							<div id="section-gallery" class="page-section my-5">
-								<h3 class="mb-3">Gallery</h3>
+								<h3 class="mb-3">HÌNH ẢNH THỰC TẾ</h3>
 								<div class="fslider flex-thumb-grid grid-6" data-animation="fade" data-speed="900" data-pagi="false" data-thumbs="true">
 									<div class="flexslider">
 										<div class="slider-wrap">
@@ -301,8 +281,8 @@ sitemap: true
 						<!-- Sidebar -->
 						<div class="col-md-4">
 							<div class="mb-4">
-								<h2 class="mb-0 h1 t600 ls0">450 PS/331 kW</h2>
-								<small>Power (hp)/Power (kW)</small>
+								<h2 class="mb-0 h1 t600 ls0">CHỈ TỪ 531.000.000đ</h2>
+								<small>THAY ĐỔI ĐỂ BỨT PHÁ</small>
 							</div>
 							<div class="line line-sm my-3"></div>
 							<div class="">
@@ -311,7 +291,7 @@ sitemap: true
 							</div>
 							<div class="card bgcolor mt-5 shadow-sm dark">
 								<div class="card-body">
-									<h3 class="card-title">Fuel Efficiency Rating / KMPH</h3>
+									<h3 class="card-title">Mức tiêu thụ nhiên liệu</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipisg elit. Perspiciatis maxime consequuntur, beatae modi corporis.</p>
 									<div class="card-text d-flex justify-content-between align-items-center">
 										<div>
