--- a/_pages/car/vios.html
+++ b/_pages/car/vios.html
@@ -65,12 +65,12 @@ sitemap: true
 											<td style="vertical-align: middle" class="t600">531.000.000đ</td>
 										</tr>
 										<tr>
-											<td><a href="#">Vios 1.5E (CVT)</a><br><small>Số Tự Động</small></td>
+											<td><a href="#">VIOS 1.5E (CVT)</a><br><small>Số Tự Động</small></td>
 											<td style="vertical-align: middle">Toàn quốc</td>
 											<td style="vertical-align: middle" class="t600">569.000.000đ</td>
 										</tr>
 										<tr>
-											<td><a href="#">Vios 1.5G (CVT)</a><br><small>Số Tự Động</small></td>
+											<td><a href="#">VIOS 1.5G (CVT)</a><br><small>Số Tự Động</small></td>
 											<td style="vertical-align: middle">Toàn quốc</td>
 											<td style="vertical-align: middle" class="t600">606.000.000đ</td>
 										</tr>
