--- a/car.html
+++ b/car.html
@@ -16,7 +16,7 @@ sitemap: true
 
 				<!-- Moving car on scroll
 				============================================= -->
-				<!--div class="section notopmargin clearfix" style="padding: 100px 0">
+				<div class="section notopmargin clearfix" style="padding: 100px 0">
 					<div class="running-car topmargin-sm">
 						<img class="car" src="{{ site.url }}/car/assets/media/moving-car/car.jpg" alt="">
 						<img class="wheel" src="{{ site.url }}/car/assets/media/moving-car/car-tier.png" alt="">
@@ -35,7 +35,7 @@ sitemap: true
 
 				<!-- Features Section
 				============================================= -->
-				<!--div class="container clearfix">
+				<div class="container clearfix">
 
 					<div class="row clearfix topmargin bottommargin">
 
@@ -1039,7 +1039,7 @@ sitemap: true
 
 				<!-- Featured Section
 				============================================= -->
-				<!--div class="section nomargin clearfix" style="background: #FFF url('{{ site.url }}/car/assets/media/features/section-bg.jpg') left bottom no-repeat; background-size: cover; padding: 140px 0">
+				<div class="section nomargin clearfix" style="background: #FFF url('{{ site.url }}/car/assets/media/features/section-bg.jpg') left bottom no-repeat; background-size: cover; padding: 140px 0">
 					<div class="container clearfix">
 						<div class="row clearfix">
 							<div class="col-lg-6 col-md-9">
